[gd_scene load_steps=14 format=3 uid="uid://bahd2ckgau6or"]

[ext_resource type="Script" path="res://stage.gd" id="1_b58sr"]
[ext_resource type="Texture2D" uid="uid://clshyyr7ucl7k" path="res://textures/space.png" id="2_8hj24"]
[ext_resource type="Texture2D" uid="uid://bb12m2t6r7jfc" path="res://textures/red_stars.png" id="3_bj6v2"]
[ext_resource type="Texture2D" uid="uid://dypb7nsund5dk" path="res://textures/white_stars.png" id="4_2dtt4"]
[ext_resource type="PackedScene" uid="uid://cxhkn3bp17dbv" path="res://player.tscn" id="5_6onrs"]
[ext_resource type="Script" path="res://position_tester.gd" id="6_uxvc2"]
[ext_resource type="PackedScene" uid="uid://cnif2iskf5eav" path="res://world_boundary.tscn" id="7_4yx2e"]
[ext_resource type="Script" path="res://location_buffer.gd" id="8_qljwx"]

[sub_resource type="LabelSettings" id="LabelSettings_hxb0q"]
font_size = 21
outline_size = 7
outline_color = Color(0.336608, 0.336608, 0.336608, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vk8fy"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pogjp"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5xaf"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ud18n"]
size = Vector2(10, 10)

[node name="Stage" type="Node"]
script = ExtResource("1_b58sr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ConditionColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 1100.0
offset_top = 25.0
offset_right = 1236.0
offset_bottom = 55.0
color = Color(0.0235294, 1, 0.0235294, 1)

[node name="ConditionLabel" type="Label" parent="CanvasLayer"]
offset_left = 1100.0
offset_top = 25.0
offset_right = 1223.0
offset_bottom = 55.0
text = "Code: Green"
label_settings = SubResource("LabelSettings_hxb0q")
uppercase = true

[node name="BlinkTimer" type="Timer" parent="CanvasLayer"]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="ConditionTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 2
motion_mirroring = Vector2(1000, 1000)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("2_8hj24")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 2000, 2000)

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 2
motion_scale = Vector2(0.25, 0.25)
motion_mirroring = Vector2(1000, 1000)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("3_bj6v2")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 2000, 2000)

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 2
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1000, 1000)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("4_2dtt4")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 2000, 2000)

[node name="Player" parent="." instance=ExtResource("5_6onrs")]
position = Vector2(0, 0)
metadata/_edit_group_ = true

[node name="Camera2D2" type="Camera2D" parent="Player"]

[node name="PositionTester" type="Label" parent="Player"]
visible = false
offset_left = 25.0
offset_top = -33.0
offset_right = 65.0
offset_bottom = -10.0
text = "location: "
script = ExtResource("6_uxvc2")

[node name="TopBound" parent="." instance=ExtResource("7_4yx2e")]
position = Vector2(0, -1000)
rotation = 1.5708
north_or_west = true

[node name="RightBound" parent="." instance=ExtResource("7_4yx2e")]
position = Vector2(2000, 0)
vertical = true

[node name="Bottombound" parent="." instance=ExtResource("7_4yx2e")]
position = Vector2(0, 1000)
rotation = 1.5708

[node name="LeftBound" parent="." instance=ExtResource("7_4yx2e")]
position = Vector2(-2000, 0)
vertical = true
north_or_west = true

[node name="NorthBuffer" type="Area2D" parent="."]
position = Vector2(0, -486)
collision_layer = 4
collision_mask = 64
script = ExtResource("8_qljwx")
horizontal = true
north_or_west = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthBuffer"]
shape = SubResource("RectangleShape2D_vk8fy")

[node name="EastBuffer" type="Area2D" parent="."]
position = Vector2(864, 0)
collision_layer = 4
collision_mask = 64
script = ExtResource("8_qljwx")
buffer_direction = 1
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastBuffer"]
shape = SubResource("RectangleShape2D_pogjp")

[node name="SouthBuffer" type="Area2D" parent="."]
position = Vector2(0, 486)
collision_layer = 4
collision_mask = 64
script = ExtResource("8_qljwx")
buffer_direction = 2
horizontal = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthBuffer"]
shape = SubResource("RectangleShape2D_h5xaf")

[node name="WestBuffer" type="Area2D" parent="."]
position = Vector2(-862, -5)
collision_layer = 4
collision_mask = 64
script = ExtResource("8_qljwx")
buffer_direction = 3
north_or_west = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestBuffer"]
shape = SubResource("RectangleShape2D_ud18n")

[connection signal="player_moved" from="." to="Player/PositionTester" method="_on_main_player_moved"]
[connection signal="timeout" from="CanvasLayer/BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="ConditionTimer" to="." method="_on_condition_timer_timeout"]
[connection signal="sent_location" from="Player" to="." method="_on_player_sent_location"]
[connection signal="sent_location" from="Player" to="Player/PositionTester" method="_on_player_sent_location"]
[connection signal="area_entered" from="NorthBuffer" to="NorthBuffer" method="_on_area_entered"]
[connection signal="area_exited" from="NorthBuffer" to="NorthBuffer" method="_on_area_exited"]
[connection signal="player_state_changed" from="NorthBuffer" to="." method="_on_north_buffer_player_state_changed"]
[connection signal="area_entered" from="EastBuffer" to="EastBuffer" method="_on_area_entered"]
[connection signal="area_exited" from="EastBuffer" to="EastBuffer" method="_on_area_exited"]
[connection signal="player_state_changed" from="EastBuffer" to="." method="_on_east_buffer_player_state_changed"]
[connection signal="area_entered" from="SouthBuffer" to="SouthBuffer" method="_on_area_entered"]
[connection signal="area_exited" from="SouthBuffer" to="SouthBuffer" method="_on_area_exited"]
[connection signal="player_state_changed" from="SouthBuffer" to="." method="_on_south_buffer_player_state_changed"]
[connection signal="area_entered" from="WestBuffer" to="WestBuffer" method="_on_area_entered"]
[connection signal="area_exited" from="WestBuffer" to="WestBuffer" method="_on_area_exited"]
[connection signal="player_state_changed" from="WestBuffer" to="." method="_on_west_buffer_player_state_changed"]
